fix(STN-443): Sprint 20 QA (#665)
* fix(STN-443): email link hover state

* fix(STN-443): remove extra spacing in pill lists

* fix(STN-443): Fix background gradient of vertical linked card with no image in a well

* chore(STN-467): Setup backstop.js for sandbox site

* fix(STN-443): raised cards should have white background to help them stand out in wells

* refactor(STN-443): clean up the spacing system to allow for elements to be nested in rows without adding extra spacing

* refactor(STN-443): cleanup and a little bit of padding on grid items

* chore(STN-443): compiled CSS

--- a/docroot/themes/humsci/humsci_basic/src/scss/elements/_base.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/elements/_base.scss
@@ -31,13 +31,9 @@ body {
 }
 
 a:not([class]),
+a.mailto,
 a.ext {
   @include hb-link--inline;
-}
-
-a.mailto {
-  @include hb-link--inline($icon: true, $icon-width: 22px);
-  @include hb-fa-mailto-icon;
 }
 
 h1 {
